# llms-txt-generator

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  pyrightconfig.json
app/: api.py  config.py  models.py
app/crawler/: crawler.py  extractor.py  robots.py  utils.py
app/generator/: llmstxt.py
app/static/: index.html  jobs.html
tests/: test_api.py  test_extractor.py  test_generator.py
